--- a/rpt_demo.ipynb
+++ b/rpt_demo.ipynb
@@ -805,7 +805,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are pretty significant differences. With a large ring system it should be fairly easy to identify any planets who's ring systems are misaligned relative to the planetary orbital plane."
+    "These are pretty significant differences. With a large ring system it should be fairly easy to identify any planets whose ring systems are misaligned relative to the planetary orbital plane."
    ]
   },
   {
